Remove Close text from close hyperlink - icon only. Text was not visible anyway. Added :use_column_name_in_class. Stop forcing the input class name to be that of the column_name unless desired. Added options parameter to active_scaffold_input_for and those methods it calls.

--- a/frontends/default/stylesheets/tools-left-handed-stylesheet.css
+++ b/frontends/default/stylesheets/tools-left-handed-stylesheet.css
@@ -57,6 +57,9 @@ margin-left: 13em;
 
 .active-scaffold a.inline-adapter-close {
 float: left;
+text-indent: 0px;
+margin-top: 3px;
+margin-right: 3px;
 }
 
 .left-handed-actions {
